--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   logger:
+  image_picker:
 
 
   # The following adds the Cupertino Icons font to your application.
